--- a/articles/search/index.yml
+++ b/articles/search/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: HeidiSteen
   ms.author: heidist
   ms.date: 03/02/2021
-  ms.openlocfilehash: 86122297340197ede15e99b8ac3f4ff2f61713b1
-  ms.sourcegitcommit: 832e92d3b81435c0aeb3d4edbe8f2c1f0aa8a46d
+  ms.openlocfilehash: 2cdb36e2cc141c440ab933ea77e4ef2e480a691e
+  ms.sourcegitcommit: 096e7972e2a1144348f8d648f7ae66154f0d4b39
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 06/07/2021
-  ms.locfileid: "111555864"
+  ms.lasthandoff: 06/23/2021
+  ms.locfileid: "112518768"
 landingContent:
 - title: Testen der kognitiven Suche
   linkLists:
@@ -36,8 +36,16 @@ landingContent:
     links:
     - text: Verwenden von KI in Suchlösungen
       url: https://youtu.be/M4Rf1s0WcWQ?t=19
-- title: Indizieren von Azure-Daten
+- title: Indizieren von Daten
   linkLists:
+  - linkListType: overview
+    links:
+    - text: Datenquellenkatalog
+      url: search-data-sources-gallery.md
+    - text: Erstellen von Indizes
+      url: search-what-is-an-index.md
+    - text: Importieren von Daten
+      url: search-what-is-data-import.md
   - linkListType: how-to-guide
     links:
     - text: Indizieren in Azure Blob Storage
@@ -46,11 +54,7 @@ landingContent:
       url: search-howto-connecting-azure-sql-database-to-azure-search-using-indexers.md
     - text: Indizieren in Cosmos DB
       url: search-howto-index-cosmosdb.md
-  - linkListType: tutorial
-    links:
-    - text: Indizieren von teilweise strukturierten Blobdaten
-      url: search-semi-structured-data.md
-- title: Zehnminütige Schnellstartanleitungen
+- title: Erste Schritte
   linkLists:
   - linkListType: quickstart
     links:
@@ -62,6 +66,28 @@ landingContent:
       url: search-create-app-portal.md
     - text: Extrahieren von Text aus Bildern und App-Dateien
       url: cognitive-search-quickstart-blob.md
+- title: Entwickeln von Apps
+  linkLists:
+  - linkListType: tutorial
+    links:
+    - text: Hinzufügen von Suchfunktionen zu Web-Apps
+      url: tutorial-csharp-overview.md
+  - linkListType: how-to-guide
+    links:
+    - text: Entwickeln in .NET
+      url: search-howto-dotnet-sdk.md
+    - text: Aufrufen von REST-APIs in VS Code
+      url: search-get-started-vs-code.md
+    - text: Aufrufen von REST-APIs in Postman
+      url: search-get-started-rest.md
+  - linkListType: reference
+    links:
+    - text: Azure SDK für .NET
+      url: /dotnet/api/overview/azure/search.documents-readme
+    - text: Azure SDK für Python
+      url: /python/api/overview/azure/search-documents-readme
+    - text: REST-API-Referenz
+      url: /rest/api/searchservice/index
 - title: Anreichern mit KI
   linkLists:
   - linkListType: concept
@@ -84,22 +110,6 @@ landingContent:
     links:
     - text: Integrierte Skills
       url: cognitive-search-predefined-skills.md
-- title: Indizieren beliebiger Daten
-  linkLists:
-  - linkListType: concept
-    links:
-    - text: Definieren eines Indexes
-      url: search-what-is-an-index.md
-    - text: Daten importieren
-      url: search-what-is-data-import.md
-    - text: Indizieren mithilfe von Power Query-Connectors
-      url: search-how-to-index-power-query-data-sources.md
-  - linkListType: reference
-    links:
-    - text: Erstellen eines Index (REST)
-      url: /rest/api/searchservice/create-index
-    - text: Erstellen eines Indexers (REST)
-      url: /rest/api/searchservice/create-indexer
 - title: Daten abfragen
   linkLists:
   - linkListType: concept
@@ -127,7 +137,7 @@ landingContent:
   - linkListType: reference
     links:
     - text: Häufig gestellte Fragen
-      url: search-faq-frequently-asked-questions.md
+      url: search-faq-frequently-asked-questions.yml
     - text: Stellen von Fragen zu Stack Overflow
       url: https://stackoverflow.com/questions/tagged/azure-search
     - text: Anfordern eines Features
