--- a/articles/cost-management-billing/microsoft-customer-agreement/index.yml
+++ b/articles/cost-management-billing/microsoft-customer-agreement/index.yml
@@ -1,22 +1,22 @@
 ### YamlMime:Landing
-title: Erste Schritte mit der Microsoft-Kundenvereinbarung
-summary: Hier finden Sie Informationen zu den ersten Schritten im Zusammenhang mit der Verwaltung Ihrer Abrechnung und Abonnements unter Ihrem Microsoft-Kundenvereinbarung. Sie erfahren, wie Sie Ihre Kosten nachvollziehen und optimieren sowie sicheren Zugriff auf Ihre Abrechnungsumgebung gewährleisten.
+title: Dokumentation zur Microsoft-Kundenvereinbarung
+summary: Hier finden Sie Informationen zu den ersten Schritten im Zusammenhang mit der Verwaltung Ihrer Abrechnung und Abonnements unter Ihrer Microsoft-Kundenvereinbarung (Microsoft Customer Agreement, MCA). Sie erfahren, wie Sie Ihre Kosten nachvollziehen und optimieren sowie sicheren Zugriff auf Ihre Abrechnungsumgebung gewährleisten.
 metadata:
-  title: Erste Schritte mit der Microsoft-Kundenvereinbarung
-  description: Hier finden Sie Informationen zu den ersten Schritten mit Ihrer Microsoft-Kundenvereinbarung.
+  title: Dokumentation zur Microsoft-Kundenvereinbarung
+  description: Hier finden Sie Informationen zu den ersten Schritten mit Ihrer Microsoft-Kundenvereinbarung (Microsoft Customer Agreement, MCA).
   ms.service: cost-management-billing
   ms.subservice: billing
   ms.topic: landing-page
   ms.collection: collection
   author: bandersmsft
   ms.author: banders
-  ms.date: 05/21/2021
-  ms.openlocfilehash: 5c64dcb1c96357128dc7a1cf86847472edf611e3
-  ms.sourcegitcommit: 80d311abffb2d9a457333bcca898dfae830ea1b4
+  ms.date: 06/16/2021
+  ms.openlocfilehash: b59028a13d3d7dfcbfdebfef803db36a660b5364
+  ms.sourcegitcommit: 91fdedcb190c0753180be8dc7db4b1d6da9854a1
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 05/26/2021
-  ms.locfileid: "110470708"
+  ms.lasthandoff: 06/17/2021
+  ms.locfileid: "112291527"
 landingContent:
 - title: Erste Schritte
   linkLists:
@@ -40,6 +40,10 @@ landingContent:
       url: ../costs/migrate-cost-management-api.md?toc=/azure/cost-management-billing/microsoft-customer-agreement/toc.json
     - text: API-Unterschiede zwischen EA und MCA
       url: /rest/api/billing/
+    - text: Power BI-Connector für Cost Management
+      url: /power-bi/connect-data/desktop-connect-azure-cost-management?toc=/azure/cost-management-billing/microsoft-customer-agreement/toc.json
+    - text: Exportieren von Cost Management-Daten
+      url: ../costs/tutorial-export-acm-data.md?toc=/azure/cost-management-billing/microsoft-customer-agreement/toc.json
 - title: Verwalten der Abrechnung
   linkLists:
   - linkListType: concept
