--- a/articles/dms/toc.yml
+++ b/articles/dms/toc.yml
@@ -156,6 +156,6 @@
         - name: Überwachen einer Onlinemigration und Ausführen der Umstellung
           href: 'https://azure.microsoft.com/resources/videos/how-to-monitor-online-migration-and-perform-cutover/'
         - name: Migration von Oracle zu Azure SQL-Datenbank
-          href: /azure/postgresql/howto-migrate-from-oracle
+          href: ../postgresql/howto-migrate-from-oracle.md
         - name: Migrieren von MongoDB zu Azure Cosmos DB
           href: 'https://azure.microsoft.com/resources/videos/how-to-migrate-mongodb-to-cosmos-db/'
