--- a/articles/peering-service/TOC.yml
+++ b/articles/peering-service/TOC.yml
@@ -45,4 +45,4 @@
     - name: Preisrechner
       href: 'https://azure.microsoft.com/pricing/calculator/?service=azure-peering'
     - name: Häufig gestellte Fragen
-      href: faq.md
+      href: faq.yml
