--- a/articles/healthcare-apis/fhir/toc.yml
+++ b/articles/healthcare-apis/fhir/toc.yml
@@ -166,6 +166,8 @@
       items:
         - name: Sicherheitskontrollen von Azure Policy
           href: ./security-controls-policy.md
+        - name: Autoskalierung für Azure API for FHIR
+          href: autoscale-azure-api-fhir.md
 - name: Ressourcen
   items:
     - name: Häufig gestellte Fragen
