--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -25,8 +25,10 @@
   items:
     - name: Planung für eine Azure Files-Bereitstellung
       href: storage-files-planning.md
-    - name: Verfügbare Dateifreigabeprotokolle
-      href: storage-files-compare-protocols.md
+    - name: SMB-Dateifreigaben
+      href: files-smb-protocol.md
+    - name: NFS-Dateifreigaben
+      href: files-nfs-protocol.md
     - name: Identitätsbasierte Authentifizierung und Autorisierung
       href: storage-files-active-directory-overview.md
     - name: Netzwerküberlegungen für den Direktzugriff
@@ -35,26 +37,6 @@
       href: ../common/storage-disaster-recovery-guidance.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: Momentaufnahmen von Azure-Dateifreigaben
       href: storage-snapshots-files.md
-    - name: Entwicklung
-      items:
-        - name: Authentifizierung mit gemeinsam verwendetem Schlüssel
-          href: /rest/api/storageservices/Authorization-for-the-Azure-Storage-Services
-        - name: Shared Access Signatures (SAS)
-          href: ../common/storage-sas-overview.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-    - name: Überwachen und Behandeln von Problemen
-      items:
-        - name: Übergang von klassischen Metriken
-          href: ../common/storage-metrics-migration.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-        - name: Überwachung (klassisch)
-          items:
-            - name: Speicheranalyse
-              href: ../common/storage-analytics.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-            - name: Metriken
-              href: ../common/storage-analytics-metrics.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-            - name: Protokolle
-              href: ../common/storage-analytics-logging.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-            - name: 'Überwachen, Diagnostizieren und Durchführen der Problembehandlung'
-              href: ../common/storage-monitoring-diagnosing-troubleshooting.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: Leistung und Skalierbarkeit
       items:
         - name: "SMB\_Multichannel-Leistung"
@@ -83,10 +65,10 @@
       items:
         - name: Erstellen einer SMB-Dateifreigabe“
           href: storage-how-to-create-file-share.md
+        - name: Erstellen einer NFS-Dateifreigabe
+          href: storage-files-how-to-create-nfs-shares.md
         - name: Verwenden von DFS-N mit Azure Files
           href: files-manage-namespaces.md
-        - name: Erstellen einer NFS-Freigabe
-          href: storage-files-how-to-create-nfs-shares.md
         - name: SQL Server-Failoverclusterinstanz mit Premium-Dateifreigaben
           href: ../../azure-sql/virtual-machines/windows/failover-cluster-instance-premium-file-share-manually-configure.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: Erwerben von Speicherreservierungen
@@ -141,8 +123,6 @@
       items:
         - name: Aktivieren von „Vorläufiges Löschen“
           href: storage-files-enable-soft-delete.md
-        - name: 'Ändern, wie Daten repliziert werden'
-          href: ../common/redundancy-migration.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: Verwalten der Datenredundanz
           items:
             - name: 'Ändern, wie Daten repliziert werden'
@@ -199,8 +179,6 @@
               href: storage-files-migration-nas-cloud-databox.md
         - name: Verwenden einer Hybridbereitstellung als Ziel
           items:
-            - name: Migrieren von Massendaten zur Azure-Dateisynchronisierung mit Azure Data Box
-              href: ../file-sync/file-sync-offline-data-transfer.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
             - name: Migrieren von Linux zu einem Hybriddateiserver mit der Azure-Dateisynchronisierung
               href: storage-files-migration-linux-hybrid.md
             - name: Migrieren von einem lokalen NAS zu einem Hybriddateiserver mit der Azure-Dateisynchronisierung
@@ -217,8 +195,6 @@
       items:
         - name: Aktivieren von SMB Multichannel
           href: storage-files-enable-smb-multichannel.md
-        - name: Aktivieren großer Dateifreigaben
-          href: storage-files-how-to-create-large-file-share.md
     - name: Entwickeln
       items:
         - name: Konfigurieren von Verbindungszeichenfolgen
@@ -251,6 +227,10 @@
           href: ../common/storage-network-security.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: Vorschreiben einer sicheren Übertragung
           href: ../common/storage-require-secure-transfer.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+        - name: "Deaktivieren von SMB\_1 für den Windows-SMB-Client"
+          href: /windows-server/storage/file-server/troubleshoot/detect-enable-and-disable-smbv1-v2-v3?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+        - name: Deaktivieren von SMB für den Linux-SMB-Client
+          href: files-remove-smb1-linux.md
         - name: Verwalten von TLS (Transport Layer Security)
           items:
             - name: Erzwingen der TLS-Mindestversion für eingehende Anforderungen
@@ -275,8 +255,6 @@
           href: storage-troubleshooting-files-performance.md
         - name: Problembehandlung für Azure Files unter Linux (NFS)
           href: storage-troubleshooting-files-nfs.md
-        - name: Problembehandlung beim Löschen von Azure-Dateifreigaben
-          href: storage-troubleshoot-cannot-delete-files-azure-file-share.md
         - name: Problembehandlung beim Sichern von Dateifreigaben
           href: ../../backup/troubleshoot-azure-files.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
 - name: Verweis
@@ -306,6 +284,8 @@
       href: 'https://azure.microsoft.com/documentation/videos/index/?services=storage'
     - name: Vergleich von Azure Files und Azure NetApp Files
       href: storage-files-netapp-comparison.md
+    - name: 'Vergleichen des Zugriffs mit NFS auf Azure Files, Blob Storage und NetApp Files'
+      href: ../common/nfs-comparison.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: NuGet-Pakete (.NET)
       items:
         - name: "Microsoft.Azure.Storage.Common (Version\_11.x)"
